--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h1>Привет, я QA-инженер!</h1>
   <p>Я специализируюсь на тестировании программного обеспечения и обеспечении его качества.</p>
   <p>Мои навыки включают:</p>
+  <p>QA Engineer</p>
   <ul>
     <li>Автоматизация тестирования</li>
     <li>Функциональное тестирование</li>
@@ -20,7 +21,7 @@
   </ul>
   <p>Я также имею опыт работы с различными инструментами и технологиями, такими как Selenium, JUnit, Cucumber, Jenkins и другими.</p>
   <p>Если вам нужен надежный и опытный QA-инженер, свяжитесь со мной по адресу электронной почты: example@example.com.</p>
-
+  <p>QA Engineer</p>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       var element = document.querySelector('.star-cursor');
